[tool.poetry]
name = "curso-de-selenium"
version = "0.1.0"
description = ""
authors = ["pinheir0g <gv.pinheiro@outlook.com>"]
readme = "README.md"
packages = [{include = "curso_de_selenium"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.12.0"
pytest = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
